# test-actions

Xcodetest/: CMakeLists.txt  main.cpp
Xcodetest.xcodeproj/: project.pbxproj
Xcodetest.xcodeproj/xcuserdata/lasithaatapattu.xcuserdatad/xcschemes/: xcschememanagement.plist
Xcodetest/.github/: ci.yml
Xcodetest/include/: main.h
Xcodetest/src/: CMakeLists.txt
Xcodetest/test/: CMakeLists.txt  test_main.cpp
